<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"

android:orientation="vertical"
tools:context=".activities.ClothesTypesMenuFragment">

<RelativeLayout
    android:id="@+id/outerwear"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/outerwearImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/outerwear" />

    <TextView
        style="@style/TextView.Title.Bright"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="35dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outerwear" />

</RelativeLayout>

<RelativeLayout
    android:id="@+id/lightClothes"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/lightClothesImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/light_clothes" />

    <TextView
        style="@style/TextView.Title.Bright"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="35dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lightClothes" />

</RelativeLayout>

<RelativeLayout
    android:id="@+id/underwear"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/underwearImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/underwear" />

    <TextView
        style="@style/TextView.Title.Bright"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="35dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/underwear" />

</RelativeLayout>

<RelativeLayout
    android:id="@+id/shoes"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/shoesImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/shoes" />

    <TextView
        style="@style/TextView.Title.Bright"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="35dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoes" />

</RelativeLayout>

<RelativeLayout
    android:id="@+id/accessories"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/accessoriesImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/accessories" />

    <TextView
        style="@style/TextView.Title.Bright"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="35dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accessories" />

</RelativeLayout>


</LinearLayout>