...

    android:background="?backgroundColor"

    tools:context=".activities.MyClothesActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        android:fitsSystemWindows="true"
        android:layout_height="@dimen/appBarHeight">

        <com.google.android.material.appbar.CollapsingToolbarLayout
...
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            tools:title="Clothes"

            app:toolbarId="@id/toolbar">


            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
